套餐除了删除功能基本完成,删除功能需要重构